@@ -1355,7 +1355,22 @@ multibuild-linux-i386: \
   build-porting32-gcc-debug_ari_asm
 
 # Linux/m68k
-multibuild-linux-m68k: multibuild-porting32-gcc # TODO
+multibuild-linux-m68k: \
+  build-porting32-gcc-portability \
+  build-porting32-gcc-safety3 \
+  build-porting32-gcc-heapcodes \
+  build-porting32-gcc-one_free_bit_heapcodes-malloc \
+  build-porting32-gcc-heapcodes-spvw_pages \
+  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting32-gcc-typecodes-spvw_mixed_blocks-trivialmap \
+  build-porting32-gcc-spvw_pure_blocks \
+  build-porting32-gcc-wide \
+  build-porting32-gcc-limited_memory \
+  build-porting32-gcc-old_gc \
+  build-porting32-gcc-multithread_gc \
+  build-porting32-gcc-safety0 \
+  build-porting32-gcc-safety0-optimized \
+  build-porting32-gcc-debug_gcsafety
 
 # Linux/mipseb with o32 ABI
 multibuild-linux-mipseb-32: multibuild-porting32-gcc # TODO
